--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 body{
-	font-size:14pt;
+	font-size:0.972vw;
 }
 .actual-bar{
 	background-image: url(solo.jpeg); 
 	width: auto;
-	height: 150px;
+	height: 11.71875vw;
 	color: white;
 }
 .text-1{
-		font-size: 20pt;
-		width:360px;
-		margin-left:6px;
+		font-size: 10vw;
+		width:56.426332288401255vw;
+		margin-left:0.46875vw;
 		list-style: none;
 		display: inline-flex;
-		height: 40px;
+		height:  6.269592476489028vw;
 		text-decoration: none;
 		background-color: white;
 		font-family: sans-serif;
@@ -22,7 +22,7 @@ body{
 {
     display: block;
     position: relative;
-    margin-top: 2px;
+    margin-top:  0.15625vw;
 	background-color: white;
 	}
 	.image-1{
@@ -34,19 +34,19 @@ body{
 		background-color: black;
 		color: white;
 		font-family: sans-serif;
-		font-size: 11pt;
+		font-size: 0.764vw;
 		width: auto;
 	}
 	.img{
 		width: 500px;
 		background-color: transparent;
 		text-align: left;
-		font-size: 13pt;
+		font-size: 0.903vw;
 	}
 	.footer_contact_form{
 		float: right;
 		background-color: black;
-		font-size: 16pt;
+		font-size: 1.111vw;
 	}
 	.footer_contact{
 		width: auto;
