--- a/style.css
+++ b/style.css
@@ -1,19 +1,29 @@
+*
+{
+	padding: 0;
+	margin: 0;
+	font-family: sans-serif;
+	width:auto;
+	height:auto;
+}
 body{
-	font-size:0.972vw;
+	font-size:14pt;
 }
 .actual-bar{
-	background-image: url(solo.jpeg); 
+	background-image: url(banner.png); 
 	width: auto;
-	height: 11.71875vw;
+	height: 180px;
 	color: white;
+	padding: 0;
+	margin: 0%;
 }
 .text-1{
-		font-size: 1.389vw;
-		width:56.426332288401255vw;
-		margin-left:0.46875vw;
+		font-size: 20pt;
+		width:360px;
+		margin-left:6px;
 		list-style: none;
 		display: inline-flex;
-		height:  6.269592476489028vw;
+		height: 40px;
 		text-decoration: none;
 		background-color: white;
 		font-family: sans-serif;
@@ -22,7 +32,7 @@ body{
 {
     display: block;
     position: relative;
-    margin-top:  0.15625vw;
+    margin-top: 2px;
 	background-color: white;
 	}
 	.image-1{
@@ -34,19 +44,21 @@ body{
 		background-color: black;
 		color: white;
 		font-family: sans-serif;
-		font-size: 0.764vw;
+		font-size: 11pt;
 		width: auto;
+		height: 300px;
 	}
 	.img{
 		width: 500px;
 		background-color: transparent;
 		text-align: left;
-		font-size: 0.903vw;
+		font-size: 13pt;
+		font-size: 18pt;
 	}
 	.footer_contact_form{
 		float: right;
 		background-color: black;
-		font-size: 1.111vw;
+		font-size: 16pt;
 	}
 	.footer_contact{
 		width: auto;
@@ -54,4 +66,26 @@ body{
 	}
 	.footer_contact_text2{
 		text-align: left;
+		font-size: 18pt;
+	}
+	div.sectionz{
+		margin: 1px; padding: 1px; border: 1px solid #0000;
+		height: auto; width: auto; float: left;
+		text-align: left;
+	}
+	div.sectionz img{
+		display: inline;
+		margin: 1px;
+		border: 1px solid #0000;
+	}
+	div.sectionz a:hover img{
+		border: 1px solid #0000;
+	}
+	.animation{
+		width:300px;
+		height:300px;
+		background-color: black;
+		padding: 0%;
+		margin: 0%;
+		float: right;
 	}
